Practica python base de datos final

--- a/ut3/a1/vmweb/uwsgi.ini
+++ b/ut3/a1/vmweb/uwsgi.ini
@@ -1,8 +1,8 @@
 [uwsgi]
-chdir = /home/alu5627/vmweb
+chdir = /home/alu5627/vmweb2
 module = main:app
 master = true
 processes = 1
-socket = /tmp/vmweb.sock
+socket = /tmp/vmweb2.sock
 chmod-socket = 666
 vacuum = true
